--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="site-main">
         <section class="puzzle-info">
             <h2>Сканворд №1</h2>
-            <p>Тема: Животные</p>
+            <p>Тема: пыпа</p>
         </section>
 
         <section class="puzzle-container">
