--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
                 <p id="result-message"></p>
             </aside>
         </section>
+
+        <!-- НОВЫЙ БЛОК С ВОПРОСАМИ К СКАНВОРДУ -->
+        <section class="puzzle-clues">
+            <h3>Вопросы к сканворду</h3>
+            <ul id="clues-list">
+                <!-- Сюда JavaScript вставит вопросы -->
+            </ul>
+        </section>
     </main>
 
     <footer class="site-footer">
