--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -15,7 +14,8 @@
     <main class="site-main">
         <section class="puzzle-info">
             <h2>Сканворд №1</h2>
-            <p>Тема: Животные</p>
+            <p>Тема: Еда и напитки</p>
+            <p>В этом сканворде 8 слов. Вопросы смотрите ниже.</p>
         </section>
 
         <section class="puzzle-container">
@@ -30,7 +30,6 @@
             </aside>
         </section>
 
-        <!-- НОВЫЙ БЛОК С ВОПРОСАМИ К СКАНВОРДУ -->
         <section class="puzzle-clues">
             <h3>Вопросы к сканворду</h3>
             <ul id="clues-list">
