--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <title>Сканворды онлайн</title>
     <link rel="stylesheet" href="styles.css">
+
+    <style>
+        .puzzle-cell {
+            position: relative;
+        }
+
+        .clue-number {
+            position: absolute;
+            top: 2px;
+            left: 2px;
+            font-size: 10px;
+            color: #333;
+            font-weight: bold;
+            pointer-events: none; /* чтобы клик шёл по клетке/инпуту */
+        }
+    </style>
+</head>
+    <meta charset="UTF-8">
+    <title>Сканворды онлайн</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="site-header">
