--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <title>Сканворд №1</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <title>Сканворд №1</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="site-header">
-  <h1>Сканворд №1</h1>
+    <h1>Сканворд №1</h1>
 </header>
 
 <main class="site-main">
-  <div class="puzzle-layout">
-    <!-- Левая колонка: только сетка -->
-    <div class="puzzle-grid-wrapper">
-      <div id="puzzle-grid" class="puzzle-grid"></div>
+    <div class="puzzle-layout">
+        <!-- Левая колонка: только сетка -->
+        <div class="puzzle-grid-wrapper">
+            <div id="puzzle-grid" class="puzzle-grid"></div>
+        </div>
+
+        <!-- Правая колонка -->
+        <div class="puzzle-sidebar">
+            <section class="puzzle-info">
+                <h2>Тема: Еда и напитки</h2>
+                <p>В этом кроссворде 30 слов по горизонтали и вертикали.</p>
+                <p>Вводите буквы в клетки — курсор сам переходит к следующей.</p>
+            </section>
+
+            <section class="puzzle-controls">
+                <button id="check-button">Проверить</button>
+                <button id="hint-button">Подсказка</button>
+                <div id="result-message"></div>
+            </section>
+
+            <!-- ВЫДЕЛЕННАЯ ОБЛАСТЬ (как на скриншоте) -->
+            <section class="active-clue-panel">
+                <div class="active-clue-title">Вопрос к выбранному слову</div>
+                <div id="active-clue-text" class="active-clue-text">
+                    Выберите слово: нажмите на клетку в сетке или на вопрос справа.
+                </div>
+            </section>
+
+            <section class="puzzle-clues">
+                <h3>Вопросы</h3>
+                <h4>По горизонтали</h4>
+                <ul id="across-clues"></ul>
+                <h4>По вертикали</h4>
+                <ul id="down-clues"></ul>
+            </section>
+        </div>
     </div>
-
-    <!-- Правая колонка: тема, описание, кнопки -->
-    <div class="puzzle-sidebar">
-      <section class="puzzle-info">
-        <h2>Тема: Еда и напитки</h2>
-        <p>В этом кроссворде 30 слов по горизонтали и вертикали.</p>
-        <p>Вводите буквы в клетки — курсор сам переходит к следующей.</p>
-      </section>
-
-      <section class="puzzle-controls">
-        <button id="check-button">Проверить</button>
-        <button id="hint-button">Подсказка</button>
-        <div id="result-message"></div>
-      </section>
-    </div>
-  </div>
-
-  <!-- ВОПРОСЫ ВНИЗУ -->
-  <section class="puzzle-clues-bottom">
-    <h3>Вопросы</h3>
-    <ul id="clues-list"></ul>
-  </section>
 </main>
 
 <footer class="site-footer">
-  © 2026 Сканворд
+    © 2026 Сканворд
 </footer>
 
 <script src="script.js"></script>
