--- a/index.html
+++ b/index.html
@@ -31,23 +31,24 @@
                 <div id="result-message"></div>
             </section>
 
-            <!-- ВЫДЕЛЕННАЯ ОБЛАСТЬ (как на скриншоте) -->
+            <!-- Блок выбранного вопроса -->
             <section class="active-clue-panel">
                 <div class="active-clue-title">Вопрос к выбранному слову</div>
                 <div id="active-clue-text" class="active-clue-text">
                     Выберите слово: нажмите на клетку в сетке или на вопрос справа.
                 </div>
             </section>
-
-            <section class="puzzle-clues">
-                <h3>Вопросы</h3>
-                <h4>По горизонтали</h4>
-                <ul id="across-clues"></ul>
-                <h4>По вертикали</h4>
-                <ul id="down-clues"></ul>
-            </section>
         </div>
     </div>
+
+    <!-- Блок вопросов на всю ширину -->
+    <section class="puzzle-clues puzzle-clues-full">
+        <h3>Вопросы</h3>
+        <h4>По горизонтали</h4>
+        <ul id="across-clues"></ul>
+        <h4>По вертикали</h4>
+        <ul id="down-clues"></ul>
+    </section>
 </main>
 
 <footer class="site-footer">
